# psr

./: .gitignore  LICENSE  README.md  setup.cfg
data/: xs_electron_cc_Z8A16.txt
data/antares/: Antares_054738_total_rates.hdf5  effective_volume_electron_cc_Z8A16.txt
data/hdf5SourceFiles/: VelaX-1.h5
singularity/: psr.def
src/: latex.mplstyle
src/antares/: antares_hdf5.py
src/epochfolding/: add_folded_profiles.py  ef_addedprofiles.py  ef_addedprofiles_test.py  generate_eventsfromtimeseries.py  generate_split_timeseries.py  gtis.py  stingray_epochfolding.py
src/examples/: #generate_split_timeseries.py#  .#generate_split_timeseries.py  Untitled.ipynb  analyse_timeseries.py  chi2_landscape.csv  epoch_folding.py  generate_split_timeseries.py  generate_timeseries.py  plot_chi2.py  read_timeseries.py  train.py  train.py~  write_timeseries.py
src/plens/: EventList.py  HarmonicSum.py  PulseModel.py  RedNoiseFilter.py  TimeSeries.py  antares_hdf5.py  plot_latex_size.py
src/scripts/: CalculateChi2s.py  CombineEventListsKM3NeT.py  CombineTimeSeries.py  ConvertKM3NeTFiles.py  CorrectEventList.py  CorrectEventListKM3NeT.py  CorrectTimeSeries.py  CreateEventListKM3NeT.py  CreateEventlist.py  EFAddedProfiles.py  EpochFoldingKM3NeT.py  FFT.py  FFT_Analysis.py  FindGTIs.py  FoldEventlist.py  InjectSignal.py  InjectSignalKM3NeT.py  LoadTimeSeries.py  Plot.py  PlotChi2Hist.py  PlotDistribution.py  Pvalue.py  SplitTimeSeries.py  antares_plot_chi2.py  calculate_efficiencies.py  create_antares_timeseries.py  efficiencies.fits  getNoiseAmplitude.py  plot_latex_size.py  test.py
(+794 files in other folders)
