[metadata]
name = psr
version = 0.0.1
author = Rodrigo G. Ruiz	
author_email = rgruiz0001@gmail.com
description = Analysis package to analyse time series data in the context of neutrino astronomy.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rodrigruiz/psr.git
project_urls =
    Bug Tracker = https://github.com/rodrigruiz/psr/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    matplotlib
    scipy
    docopt
    km3io
    boost_histogram
    h5py
    astropy
    stingray
    pyyaml
    seaborn
    pyfftw
[options.packages.find]
where = src
